# hack

./: describe.excalidraw  hack_computer.circ
c1/: Nand.api  Not.api  Xor.hdl
c1/DMux/: DMux.api  DMux.dig
c1/DMux4Way/: DMux4Way.dig
c1/Mux/: Mux.api  Mux.dig
c1/Mux4Way16/: mux4way16.api
c1/Xor/: Xor.api  xor.dig
c1/c2/: .incrementer.api.kate-swp
c1/c2/adder/: adder.api
c1/c2/fullAdder/: FullAdder.api
c1/c2/hack/: .alu.api.kate-swp
c2/alu/: spec.api
c2/halfAdder/: .halfAdder.api.kate-swp  halfAdder.api  halfAdder.dig
c3/: PC.api
c3/Ram/: Ram.api
c3/Register/: Bit.api  Register.api
nand2tetris/projects/01/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
nand2tetris/projects/02/: .FullAdder.hdl.kate-swp  ALU.hdl  Add16.hdl  FullAdder.hdl
nand2tetris/projects/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  (+4 more)
nand2tetris/projects/05/: CPU.hdl  Memory.hdl
software/assembler/: CMakeLists.txt
software/assembler/c++/: Add.asm  Add.hack  assembler  assembler.cpp  basic.cpp  basicAssembler  code.cpp  code.h  makefile  parser.cpp  parser.h
software/compiler/: Cargo.toml  diagram.excalidraw
software/compiler/src/: compilation_engine.rs  lib.rs  main.rs  tokenizer.rs  utils.rs  xml_writer.rs
software/vm_translator/: ..asm  BasicLoop.asm  BasicTest.asm  BasicTest.hack  BasicTest.vm  Cargo.toml  PointerTest.asm  PointerTest.vm  README.md  StaticTest.asm
software/vm_translator/src/: code_writer.rs  constants.rs  lib.rs  main.rs  parser.rs
(+27 files in other folders)
