[package]
name = "vm_translator"
description = "A VM translator for the hack machine (ref: The Element Of Compting System)"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/xpanvictor/hack/tree/master/software/vm_translator"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
